--- a/rs/templates/common_helpers/footer.html
+++ b/rs/templates/common_helpers/footer.html
@@ -1,49 +1,24 @@
 {% load i18n %}
 
-<!--
-################################################################################
-# LexaLink Copyright information - do not remove this copyright notice
-# Copyright (C) 2012
-#
-# Lexalink - a free social network and dating platform for the Google App Engine.
-#
-# Original author: Alexander Marquardt
-# Documentation and additional information: http://www.LexaLink.com
-# Git source code repository: https://github.com/lexalink/LexaLink.git
-#
-# Please consider contributing your enhancements and modifications to the LexaLink community,
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-################################################################################
--->
-<div class="cl-clear"></div>
-<div class="cl-footer" id="id-footer">
-    <div class="grid_6 alpha cl-left-text info-link-footer-format">
-        <div class="cl-padding-5px">
-            &copy; 2010 <a href="http://{{ company_www }}">{{ company_name }}</a> - {{ support_email_address }}
+<div class="grid_12">
+    <div class="cl-footer-divider-line"></div>
+    <div class="cl-clear"></div>
+    <div id="id-footer">
+        <div class="grid_6 alpha  cl-left-text info-link-footer-format">
+            <div class="cl-padding-3px">
+                &copy; 2010 <a href="http://{{ company_www }}">{{ company_name }}</a> - {{ support_email_address }}
+            </div>
         </div>
-    </div>
 
-    <div class="grid_6 omega cl-right-text info-link-footer-format">
-        <div class="cl-padding-5px">
-            <a href="{% url views.terms %}" rel="address:{% url views.terms %}">{% trans "Terms and conditions" %}</a>
+        <div class="grid_6  omega cl-right-text info-link-footer-format">
+            <div class="cl-padding-3px">
+                <a href="{% url views.terms %}" rel="address:{% url views.terms %}">{% trans "Terms and conditions" %}</a>
+            </div>
         </div>
-    </div>   
+    </div> <!-- end grid_12 -->
+</div>
 
-
-</div> <!-- end grid_12 -->
 <div class="cl-clear"></div>
-
 
 <!-- Please do not remove the "Powered by LexaLink" icon and link to the LexaLink website -->
 <!-- Removing this link will be considered a violation of the licensing agreement. -->
