--- a/rs/templates/login_helpers/login.html
+++ b/rs/templates/login_helpers/login.html
@@ -1,26 +1,30 @@
 {% load i18n %}
 
-
+        <div class="cl-horiz-bar-div">
         <table id="id-horiz-bar-table"> <!-- outer table -->
             <tr> <!-- container row -->
-                {% if build_name == "discrete_build" %}
-                <td class="cl-td-horizontal-bar" id="id-td-horizontal-bar-first-cell">
-                    {% trans "Free confidential dating" %}.
-                </td>
-                {% endif %}
+                {% if not hide_site_tagline %}
+                    {% if build_name == "discrete_build" %}
+                    <td class="cl-td-horizontal-bar" id="id-td-horizontal-bar-first-cell">
+                        {% trans "Free confidential dating" %}.
+                    </td>
+                    {% endif %}
 
-                {% if SITE_IS_TOTALLY_FREE %}
-                <td class="cl-td-horizontal-bar" id="id-td-horizontal-bar-first-cell">
-                    {% trans "100 percent free everything included" %}.
-                </td>
+                    {% if SITE_IS_TOTALLY_FREE %}
+                    <td class="cl-td-horizontal-bar" id="id-td-horizontal-bar-first-cell">
+                        {% trans "100 percent free everything included" %}.
+                    </td>
+                    {% endif %}
                 {% endif %}
 
                 <td class="cl-td-horizontal-bar" id="id-td-horizontal-bar-second-cell">
+                    &nbsp;
                     {% if build_name == "lesbian_build" %}
-                        {% trans "Are you already registered (female)? Enter here:" %}&nbsp;
+                        {% trans "Are you already registered (female)? Enter here:" %}
                     {% else %}
-                        {% trans "Are you already registered? Enter here:" %}&nbsp;
+                        {% trans "Are you already registered? Enter here:" %}
                     {% endif %}
+                    &nbsp;
                 </td>
 
                 <td class="cl-td-horizontal-bar cl-td-horizontal-bar-input-field">
@@ -32,15 +36,15 @@
                     <form id="id-login_form" method=POST action="{% url login.process_login %}">
                     {% endif %}
                         <input type="text"
-                           class="defaultText cl-gray-letters-text-prompt cl-nick-textinput-width-px"
+                           class="defaultText cl-gray-letters-text-prompt cl-nick-textinput-width-px cl-textinput-font-size"
                            title='{% trans "username or email"%}'
                            id="id-login_fields-username_email" name="username_email" maxlength=50>
                         <!-- need to define two boxes for the password - but only one will be shown at a time -
                required for showing text prompt in the input box -->
-                        <input type="text" class="cl-gray-letters-text-prompt cl-narrow-textinput-width-px"
+                        <input type="text" class="cl-gray-letters-text-prompt cl-narrow-textinput-width-px cl-textinput-font-size"
                                value='{% trans "password" %}' id="id-password-prompt"
                                name="password-prompt" maxlength=50>
-                        <input type="password" class="cl-narrow-textinput-width-px" id="id-password-input"
+                        <input type="password" class="cl-narrow-textinput-width-px cl-textinput-font-size" id="id-password-input"
                                name="password" maxlength=50>
                         <input id="id-submit-login-button" type="submit" class="cl-small-login-button"
                                value='{% trans "Enter" %}!'>
@@ -51,6 +55,7 @@
                 <!-- the following rows push the table up from the bottom-->
             </tr>
         </table>
+        </div>
         <!-- end outer table -->
 
      <div id="id-forgot-password" style="display:none;"><div  class="cl-right-text" >
