Registrations from popup appear to be working (works on any page a member might register from)

--- a/rs/templates/common_wrapper.html
+++ b/rs/templates/common_wrapper.html
@@ -115,9 +115,7 @@
     
     {% include "user_main_helpers/chat.html" %}
 
-    <div id="id-show_spinner_while_loading" style="display:none;">
-    </div>
-
+    <div id="id-dialog_box_for_user_feedback" style="display:none;"></div>
 
 </body>
 </html>
