--- a/rs/templates/common_helpers/logo_banner.html
+++ b/rs/templates/common_helpers/logo_banner.html
@@ -97,8 +97,21 @@
                             at: "center"
                         }
                     });
-                    
+
+                    // remove the background color from the "already registered" text
+                    $('#id-show-registration-and-login').find('.cl-horiz-bar-div').removeClass('cl-horiz-bar-div');
+                    // set the "already registered" text to dark gray
+                    $('#id-show-registration-and-login').find('.cl-td-horizontal-bar').css({'color': '#333333'});
                     $('#id-show-registration-and-login').dialog('open');
+
+                    var background_img = $('#rs-nav').css('background-image');
+                    var background_color = $("<h1>foo</h1>").hide().appendTo("body").css('color');
+                    // set the background image on the dialog titlebar to be the same as the navigation bar
+                    $('#id-show-registration-and-login').parent().find('.ui-widget-header').css({'background-image': background_img });
+                    // hide the background color of the titlebar and remove the border - basically we are over-riding the default
+                    // jquery UI default values to match the color scheme of the current site.
+                    $('#id-show-registration-and-login').parent().find('.ui-widget-header').css({'background-color': '#FFF' });
+                    $('#id-show-registration-and-login').parent().find('.ui-widget-header').css({'border': '0px' }); 
                 },
                 error: function () {
 
