Ensure that login from pop-up re-directs to the URL that was previously being viewed by the person before logging in.
Login from pop-up dialog box appears to be working correctly.

--- a/rs/templates/login_helpers/login.html
+++ b/rs/templates/login_helpers/login.html
@@ -86,6 +86,7 @@
             var submit_form_url = $("#id-login_form").attr('action');
             $(this).ajaxSubmit({url: submit_form_url,
                 dataType: "json",
+                data: {'current_path' : window.location.pathname},
                 clearForm: false,
                 cache: false,
                 success:  function(post_response) {
