Added a prompt to the registration popup to indicate to the guest that they have to register to contact members.

--- a/rs/templates/common_helpers/logo_banner.html
+++ b/rs/templates/common_helpers/logo_banner.html
@@ -88,7 +88,7 @@
 
         
         $('#id-register-enter-href').click(function(){
-            show_registration_and_login();
+            show_registration_and_login("");
 
         })
         
