--- a/rs/templates/common_helpers/logo_banner.html
+++ b/rs/templates/common_helpers/logo_banner.html
@@ -56,7 +56,7 @@
                             {% if general_information_data_fields.register_enter_click_sends_to_landing %}
                                 <td class="cl-info-td cl-info-100px-width-td" align="center"><a id="id-register_enter_click_sends_to_landing-href" href="/">
                             {% else %}
-                                <td class="cl-info-td cl-info-100px-width-td" align="center"><a id="id-register-enter-href" href="#">
+                                <td class="cl-info-td cl-info-100px-width-td" align="center"><a class="cl-register-enter-href" href="#">
                             {% endif %}
                                 {% trans "Register / Enter" %}</a></td>
                         {% endifnotequal %}
@@ -84,13 +84,11 @@
 
     <script type="text/javascript">
         // Javascript that will pop-up registration/login when the user clicks on the register/login link
-
-
-        
-        $('#id-register-enter-href').click(function(){
-            show_registration_and_login("");
-
-        })
-        
+        $(document).ready(function() {
+            $('.cl-register-enter-href').click(function(){
+                show_registration_and_login("");
+                return false; // prevent default 
+            })
+        });
      </script>
 {% endif %}
