Added a message to the registration box to indicate to the users that they must enter a valid email address, and that they will not be spammed.

--- a/rs/static/css/user_main.css
+++ b/rs/static/css/user_main.css
@@ -490,9 +490,15 @@ div#id-show_spinner_while_loading
     text-align: center;
 }
 
+.cl-login-fields-background td.cl-registration-very-small-prompt-td
+{
+	font-size: 9pt;
+    text-align: center;
+}
+
 .cl-login-fields-background td
 {
-	padding: 5px;
+	padding: 3px;
     font-size: 14px;
 }
 
